fixed text wrapping in styling for list items

--- a/src/components/ListItem/ListItem.scss
+++ b/src/components/ListItem/ListItem.scss
@@ -14,7 +14,7 @@
         max-width: 95%;
     }
     &-text{
-        word-break: break-all;
+        overflow-wrap: break-word;
         display: flex;
         text-align: left;
         margin-left: 10px;
